contra_subsetD, equalityCE, equalityD1, equalityD2, equalityE, equalityI,
imageE, imageI, image_Un, image_insert, insert_commute, insert_iff,
mem_Collect_eq, rangeE, rangeI, range_eqI, subsetCE, subsetD, subsetI,
subset_refl, subset_trans, vimageD, vimageE, vimageI, vimageI2, vimage_Collect,
vimage_Int, vimage_Un. INCOMPATIBILITY, use thm(s) antiquotation instead.

* Normalization by evaluation (method "normalization", command value) could
yield false positives due to incomplete handling of polymorphism in certain
situations; this is now corrected.

* Theory "HOL.Nat": Added Kleene's Fixed Point Theorem for lfp.

* Theory "HOL-Library.Code_Target_Bit_Shifts" incorporated into HOL-Main.
Minor INCOMPATIBILITY.

* If "HOL-Library.Code_Target_Nat" is imported, bit operations on nat are
implemented by bit operations on target-language integers.
Minor INCOMPATIBILITY.

* Theory "HOL.Fun":
  - Added lemmas.
      antimonotone_on_inf_fun
      antimonotone_on_sup_fun
      mono_on_invE
      mono_on_strict_invE
      monotone_on_inf_fun
      monotone_on_sup_fun
      strict_mono_on_eq
      strict_mono_on_less
      strict_mono_on_less_eq
  - Removed lemmas. Minor INCOMPATIBILITY.
      mono_on_greaterD (use mono_invE instead)

* Theory "HOL.Relation":
  - Changed definition of predicate refl_on to not constrain the domain
    and range of the relation. To get the old semantics, explicitely use
    the formula "r \<subset> A \<times> A \<and> refl_on A r". INCOMPATIBILITY.
  - Removed predicate single_valuedp. Use predicate right_unique instead.
    INCOMPATIBILITY.
  - Removed lemmas. Minor INCOMPATIBILITY.
      antisym_bot[simp] (use antisymp_on_bot instead)
      antisym_empty[simp] (use antisym_on_bot instead)
      reflp_mono (use reflp_on_mono_strong instead)
      trans_empty[simp] (use trans_on_bot instead)
  - Strengthened lemmas. Minor INCOMPATIBILITY.
      refl_on_empty[simp]
  - Strengthened (and renamed) lemmas. Minor INCOMPATIBILITY.